<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X Alarm</string>
    
    <!-- Menu actions -->
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_test">Test sensor</string>
    <string name="action_share">Share app</string>
    <string name="action_ads">View ads</string>
    <string name="action_about">About</string>
    <string name="action_rank">Rank app</string>
    
    <!-- Main activity -->
    <string name="no_alarm">No alarm\n\nPress the \"+\" button to add one</string>
    <string name="share_text">Hi There, I\'m using %s. A funny and useful alarm app of Android. When the alarm goes off, you can stop it not only by clicking a button, but also by taping it, shaking it, shouting to it, or even throwing it upward !</string>

    <!-- Alarm define activity -->
    <string name="title_add_alarm">Add alarm</string>
    <string name="title_edit_alarm">Edit alarm</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="every_day">Every day</string>
    <string name="label">Label</string>
    <string name="time_separator">:</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="repeat">Repeat</string>
    <string name="label_define_dialog_title">Label of alarm</string>
    <string name="ringtone_picker_title">Select ringtone</string>
    <string name="config_way_to_stop_alarm">Configure the way you stop the alarm</string>

    <!-- Delete dialog -->
    <string name="selected">Selected</string>
    <plurals name="delete_dialog_message">
        <item quantity="one">Delete selected alarm ?</item>
        <item quantity="other">Delete selected alarms ?</item>
    </plurals>

    <!-- Toast message -->
    <string name="time_before_go_off_text">Alarm set for %s from now</string>
    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <string name="less_than_one_minute">less than 1 minute</string>
    
    <!-- Alarm stop config dialog -->
	<string name="way_to_stop_alarm">The way you stop the alarm</string>
	<string name="level">Level</string>
	<plurals name="times">
        <item quantity="one">Time</item>
        <item quantity="other">Times</item>
    </plurals>
	<string name="times_lowercase_singular">time</string>
	<string name="times_lowercase">times</string>
	<string name="only_on_pro_version">Only available on Pro version</string>
	
	<!-- Alarm go off activity -->
	<string name="stop_alarm">Stop alarm</string>
	<string name="press_again_to_exit">Press again to exit</string>
	
	<!-- Advertisement activity -->
	<string name="advertisement">Advertisement</string>
	<string name="loading">Loading&#8230;</string>
	<string name="load_failed">Load failed</string>

</resources>
