<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <!-- item
        android:id="@+id/action_test_debug"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="TEST"-->
    <item
        android:id="@+id/action_test"
        android:showAsAction="never"
        android:title="@string/action_test"/>
    <item
        android:id="@+id/action_share"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_rank"
        android:showAsAction="never"
        android:title="@string/action_rank" />
    <item
        android:id="@+id/action_ads"
        android:showAsAction="never"
        android:title="@string/action_ads"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>